--- a/assets/www/style.css
+++ b/assets/www/style.css
@@ -47,11 +47,21 @@ body { background: #008; }
 }
 #video {
  position: absolute;
- top: 50%; left: 50%;
- /* 1280x720 :: 800x450 */
- width: 800px; height: 450px;
- margin-left: -400px; margin-top: -225px;
+ left: 0; top: 50%;
+ /* 1280x720 :: 800x450 .. plus 10px border */
+ width: 100%; height: 460px;
+ margin-top: -230px;
  background: #fff;
+ text-align: center;
+ white-space: nowrap;
+ /* overflow style very important, keeps us from 'zooming' when you
+  * double tap on (hidden!) #video element, despite pointer-events: none
+  * *and* overflow: hidden style on <body>. */
+ overflow: hidden;
+}
+#video > * {
+ display: inline-block;
+ width: 800px; height: 450px;
  border: 5px solid black;
 }
 #mask, #video, #menu, #rotate {
